# pyfarmer

./: .gitignore  .gitmodules  .python-version  LICENSE  README.md  main.py  pyproject.toml  shell.nix  start_farm.sh  test.py
.github/workflows/: documentation.yml  latest-tag.yml  pypi-publish.yml  python-app.yml  test.yml
pyfarmer/: __init__.py  _client.py  _entry.py  _pyfarmer.py  _strategies.py  _tmp.py  _utils.py
samples/: service1-2.py  service1-3.py  service1.py  trademark1.py  trademark2.py  trademark3.py
tests/: sploit.py  test_pyfarmer.py
typings/: aiotools.pyi
