[tool.poetry]
name = "pyfarmer"
version = "1.0.1"
description = "A farmer for your flag farm"
authors = ["rikyiso01 <riky.isola@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.24.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
certifi = "^2018.1.18"
chardet = "^3.0.4"
click = "^6.7"
Flask = "^1.1.1"
idna = "^2.6"
itsdangerous = "^0.24"
Jinja2 = "^2.11.3"
MarkupSafe = "^1.1.1"
requests = "^2.22.0"
"themis.finals.attack.helper" = "^1.1.0"
"themis.finals.attack.result" = "^1.3.0"
urllib3 = "^1.26.5"
Werkzeug = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = 'tests'
