[tool.poetry]
name = "pyfarmer"
version = "2.0.1"
description = "A farmer for your Destructive Farm"
authors = ["rikyiso01 <riky.isola@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/rikyiso01/pyfarmer"
documentation = "https://rikyiso01.github.io/pyfarmer"
keywords = ["destructivefarm", "attack-defense-ctf"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Unix",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.24.1"
aiotools = "^1.6.1"
typing-extensions = "^4.6.3"
anyio = "^3.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
pwntools-stubs = "^0.1.2"
async-timeout = "^4.0.2"
aiohttp = "^3.8.4"
pytest-asyncio = "^0.21.0"
pdoc = "^14.0.0"
# Destructive farm
certifi = "^2018.1.18"
chardet = "^3.0.4"
click = "^6.7"
Flask = "^1.1.1"
idna = "^2.6"
itsdangerous = "^0.24"
Jinja2 = "^2.11.3"
MarkupSafe = "^1.1.1"
requests = "^2.22.0"
"themis.finals.attack.helper" = "^1.1.0"
"themis.finals.attack.result" = "^1.3.0"
urllib3 = "^1.26.5"
Werkzeug = "^0.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = 'tests'
